--- a/index.html
+++ b/index.html
@@ -1023,17 +1023,52 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
       padding-inline: 1rem;
       box-sizing: border-box;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 0.75rem;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.6rem;
     }
 
-    .schedule-card__header [data-open-today],
-    .schedule-card__header [data-open-week] {
-      margin-left: 0.5rem;
+    .schedule-card__title-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.45rem;
+      width: 100%;
+    }
+
+    .schedule-card__mode-buttons {
+      display: inline-flex;
+      gap: 0.4rem;
+      flex-wrap: wrap;
+    }
+
+    .schedule-card__mode-button {
       font-size: 0.85rem;
-      padding: 0.35rem 0.6rem;
+      padding: 0.35rem 0.75rem;
+      border-radius: 999px;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      background: rgba(23, 32, 44, 0.88);
+      color: rgba(226, 232, 240, 0.92);
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, color 160ms ease,
+        box-shadow 160ms ease;
+    }
+
+    .schedule-card__mode-button:hover,
+    .schedule-card__mode-button:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(31, 45, 62, 0.95);
+      color: #f8fafc;
+      outline: none;
+    }
+
+    .schedule-card__mode-button--active {
+      background: rgba(20, 83, 78, 0.4);
+      border-color: rgba(45, 212, 195, 0.6);
+      color: rgba(45, 212, 195, 0.95);
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.38) inset;
     }
 
     @media (max-width: 560px) {
@@ -1257,7 +1292,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     .weekly-grid {
       display: grid;
       grid-template-columns: repeat(var(--weekly-grid-columns, 5), minmax(0, 1fr));
-      grid-template-rows: repeat(var(--weekly-grid-rows, 2), minmax(104px, 1fr));
+      grid-template-rows: repeat(var(--weekly-grid-rows, 2), minmax(96px, 1fr));
       width: 100%;
       border-radius: 18px;
       background: linear-gradient(180deg, rgba(12, 18, 27, 0.94), rgba(9, 13, 20, 0.92));
@@ -1275,8 +1310,8 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
       display: flex;
       flex-direction: column;
       align-items: stretch;
-      gap: 0.65rem;
-      padding: 0.9rem 0.7rem 2.2rem;
+      gap: 0.55rem;
+      padding: 0.8rem 0.65rem 1.9rem;
       background: rgba(15, 21, 30, 0.92);
       color: inherit;
       text-align: left;
@@ -1284,7 +1319,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
       border-right: 1px solid rgba(148, 163, 184, 0.22);
       border-bottom: 1px solid rgba(148, 163, 184, 0.18);
       transition: background 150ms ease, color 150ms ease;
-      min-height: 104px;
+      min-height: 96px;
     }
 
     .weekly-grid:not(.weekly-grid--with-weekend) .weekly-grid__cell:nth-child(5n) {
@@ -1308,7 +1343,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     }
 
     .weekly-grid__cell--weekend {
-      padding: 1.1rem 0.85rem 1.35rem;
+      padding: 0.95rem 0.85rem 1.2rem;
       border-right: none;
       border-bottom: none;
     }
@@ -1426,13 +1461,20 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     .weekend-card {
       display: flex;
       flex-direction: column;
-      gap: 0.65rem;
+      gap: 0.55rem;
       background: linear-gradient(180deg, rgba(15, 23, 36, 0.9), rgba(11, 17, 26, 0.92));
       border-radius: 16px;
       border: 1px solid rgba(148, 163, 184, 0.28);
       box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.35);
-      padding: 1rem 0.9rem 1rem;
+      padding: 0.85rem 0.9rem 0.85rem;
       min-height: 100%;
+    }
+
+    .weekend-card__header {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 0.5rem;
     }
 
     .weekend-card__title {
@@ -1451,7 +1493,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
 
     .weekend-card__badge {
       align-self: flex-start;
-      padding: 0.32rem 0.7rem;
+      padding: 0.28rem 0.65rem;
       border-radius: 999px;
       font-size: 0.68rem;
       font-weight: 700;
@@ -1476,16 +1518,15 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     }
 
     .weekend-card__toggle {
-      margin-top: auto;
-      align-self: flex-start;
-      padding: 0.6rem 1rem;
-      border-radius: 12px;
+      align-self: flex-end;
+      padding: 0.45rem 0.85rem;
+      border-radius: 999px;
       border: 1px solid rgba(148, 163, 184, 0.35);
       background: rgba(23, 32, 44, 0.88);
       color: rgba(226, 232, 240, 0.94);
-      font-size: 0.85rem;
-      font-weight: 600;
-      letter-spacing: 0.04em;
+      font-size: 0.75rem;
+      font-weight: 700;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
       cursor: pointer;
       transition: border-color 160ms ease, background 160ms ease, color 160ms ease,
@@ -1531,7 +1572,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     .weekly-grid--single-day {
       --weekly-grid-columns: 2;
       grid-template-columns: repeat(2, minmax(0, 1fr));
-      grid-template-rows: minmax(120px, 1fr);
+      grid-template-rows: minmax(110px, 1fr);
     }
 
     .weekly-grid--single-day .weekly-grid__cell {
@@ -1543,7 +1584,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     }
 
     .weekly-grid.weekly-grid--single-day .weekly-grid__cell {
-      min-height: 120px;
+      min-height: 110px;
     }
 
     @media (max-width: 600px) {
@@ -10013,7 +10054,10 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
 
   <section class="card schedule-card" id="weeklyScheduleCard" aria-label="Weekly clinic schedule">
     <div class="schedule-card__header">
-      <h2 class="schedule-card__title">Care I will Provide Today</h2>
+      <div class="schedule-card__title-group">
+        <h2 class="schedule-card__title">Care I will Provide Today</h2>
+        <div class="schedule-card__mode-buttons" data-schedule-mode></div>
+      </div>
     </div>
     <div class="schedule-card__content">
       <div class="schedule-card__column schedule-card__column--schedule">
@@ -24767,14 +24811,20 @@ function playfulName(s){ return s?.replace(/chart/i,"Chart Dragon") || s; }
         }
       }
 
-      function applyAvailabilityUI(state, badge, toggle) {
+      function applyAvailabilityUI(state, badge, toggle, label) {
         const isOn = Boolean(state);
-        badge.textContent = isOn ? "Available" : "Off duty";
+        const statusText = isOn ? "Available" : "Off duty";
+        badge.textContent = statusText;
         badge.classList.toggle("weekend-card__badge--on", isOn);
         badge.classList.toggle("weekend-card__badge--off", !isOn);
-        toggle.textContent = isOn ? "Turn off" : "Turn on";
+        toggle.textContent = statusText;
         toggle.classList.toggle("weekend-card__toggle--active", isOn);
         toggle.setAttribute("aria-pressed", isOn ? "true" : "false");
+        const action = isOn ? "Mark off duty" : "Mark available";
+        const statusLabel = `${label} — ${statusText}`;
+        const description = `${action} (${statusLabel})`;
+        toggle.setAttribute("aria-label", description);
+        toggle.title = description;
       }
 
       function createWeekendCell(dayKey, label, availability) {
@@ -24790,6 +24840,9 @@ function playfulName(s){ return s?.replace(/chart/i,"Chart Dragon") || s; }
 
         const card = document.createElement("div");
         card.className = "weekend-card";
+
+        const header = document.createElement("div");
+        header.className = "weekend-card__header";
 
         const title = document.createElement("div");
         title.className = "weekend-card__title";
@@ -24807,12 +24860,11 @@ function playfulName(s){ return s?.replace(/chart/i,"Chart Dragon") || s; }
         toggle.className = "weekend-card__toggle";
         toggle.dataset.weekendToggle = dayKey;
 
+        header.append(title, toggle);
+
         const setState = () => {
           const isAvailable = dayKey === "sun" ? availability.sun : availability.sat;
-          applyAvailabilityUI(isAvailable, badge, toggle);
-          const stateLabel = `${label} — ${isAvailable ? "On" : "Off"}`;
-          toggle.setAttribute("aria-label", stateLabel);
-          toggle.title = stateLabel;
+          applyAvailabilityUI(isAvailable, badge, toggle, label);
         };
 
         setState();
@@ -24836,7 +24888,7 @@ function playfulName(s){ return s?.replace(/chart/i,"Chart Dragon") || s; }
           }
         });
 
-        card.append(title, note, badge, toggle);
+        card.append(header, note, badge);
         cell.append(dayLabel, card);
         return cell;
       }
