--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       top: calc(100% + 0.5rem);
       right: clamp(1rem, 4vw, 1.5rem);
       width: min(420px, 94vw);
-      background: #0f172a;
+      background: rgba(15, 23, 42, 0.92);
       color: var(--text-primary);
       border-radius: 16px;
       border: 1px solid rgba(148, 163, 184, 0.35);
